RESOLVED FIXED122621
+[JSContext currentCallee] should return the currently executing JS function
https://bugs.webkit.org/show_bug.cgi?id=122621
Summary +[JSContext currentCallee] should return the currently executing JS function
Mark Hahnenberg
Reported 2013-10-10 13:48:30 PDT
"It would be useful if there was a +[JSContext currentObject] API which was callable from ObjC API callbacks. Its purpose would be to allow convenient access to the JSValue wrapper for the currently-executing block callback."
Attachments
Patch (7.87 KB, patch)
2013-10-10 15:21 PDT, Mark Hahnenberg
no flags
availability macro hacks (8.81 KB, patch)
2013-10-15 14:56 PDT, Mark Hahnenberg
no flags
more availability macro hacks (8.90 KB, patch)
2013-10-15 15:19 PDT, Mark Hahnenberg
no flags
trying to build (9.24 KB, patch)
2013-10-15 16:03 PDT, Mark Hahnenberg
no flags
whyunobuild (9.40 KB, patch)
2013-10-15 16:23 PDT, Mark Hahnenberg
no flags
Patch (8.61 KB, patch)
2014-02-06 16:36 PST, Mark Hahnenberg
ggaren: review+
Mark Hahnenberg
Comment 1 2013-10-10 13:48:47 PDT
Mark Hahnenberg
Comment 2 2013-10-10 15:21:50 PDT
Darin Adler
Comment 3 2013-10-10 22:44:02 PDT
Comment on attachment 213933 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=213933&action=review > Source/JavaScriptCore/API/JSContext.h:72 > ++ (JSValue *)currentCallee; Don’t we need to put availability macros on new methods that were not always in older versions of this API?
Mark Hahnenberg
Comment 4 2013-10-15 14:56:09 PDT
Created attachment 214305 [details] availability macro hacks
WebKit Commit Bot
Comment 5 2013-10-15 14:57:07 PDT
Attachment 214305 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/API/JSContext.h', u'Source/JavaScriptCore/API/JSContext.mm', u'Source/JavaScriptCore/API/JSContextInternal.h', u'Source/JavaScriptCore/API/ObjCCallbackFunction.mm', u'Source/JavaScriptCore/API/WebKitAvailability.h', u'Source/JavaScriptCore/API/tests/testapi.mm', u'Source/JavaScriptCore/ChangeLog']" exit_code: 1 Source/JavaScriptCore/API/WebKitAvailability.h:52: Missing spaces around = [whitespace/operators] [4] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Mark Hahnenberg
Comment 6 2013-10-15 15:19:01 PDT
Created attachment 214308 [details] more availability macro hacks
WebKit Commit Bot
Comment 7 2013-10-15 15:20:26 PDT
Attachment 214308 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/API/JSContext.h', u'Source/JavaScriptCore/API/JSContext.mm', u'Source/JavaScriptCore/API/JSContextInternal.h', u'Source/JavaScriptCore/API/ObjCCallbackFunction.mm', u'Source/JavaScriptCore/API/WebKitAvailability.h', u'Source/JavaScriptCore/API/tests/testapi.mm', u'Source/JavaScriptCore/ChangeLog']" exit_code: 1 Source/JavaScriptCore/API/WebKitAvailability.h:52: Missing spaces around = [whitespace/operators] [4] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Build Bot
Comment 8 2013-10-15 15:48:34 PDT
Comment on attachment 214308 [details] more availability macro hacks Attachment 214308 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/4107054
Mark Hahnenberg
Comment 9 2013-10-15 16:03:48 PDT
Created attachment 214315 [details] trying to build
WebKit Commit Bot
Comment 10 2013-10-15 16:04:57 PDT
Attachment 214315 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/API/JSContext.h', u'Source/JavaScriptCore/API/JSContext.mm', u'Source/JavaScriptCore/API/JSContextInternal.h', u'Source/JavaScriptCore/API/ObjCCallbackFunction.mm', u'Source/JavaScriptCore/API/WebKitAvailability.h', u'Source/JavaScriptCore/API/tests/testapi.mm', u'Source/JavaScriptCore/ChangeLog']" exit_code: 1 Source/JavaScriptCore/API/WebKitAvailability.h:52: Missing spaces around = [whitespace/operators] [4] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Mark Hahnenberg
Comment 11 2013-10-15 16:23:38 PDT
Created attachment 214317 [details] whyunobuild
WebKit Commit Bot
Comment 12 2013-10-15 16:24:37 PDT
Attachment 214317 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/API/JSContext.h', u'Source/JavaScriptCore/API/JSContext.mm', u'Source/JavaScriptCore/API/JSContextInternal.h', u'Source/JavaScriptCore/API/ObjCCallbackFunction.mm', u'Source/JavaScriptCore/API/WebKitAvailability.h', u'Source/JavaScriptCore/API/tests/testapi.mm', u'Source/JavaScriptCore/ChangeLog']" exit_code: 1 Source/JavaScriptCore/API/WebKitAvailability.h:52: Missing spaces around = [whitespace/operators] [4] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Build Bot
Comment 13 2013-10-15 16:54:26 PDT
Comment on attachment 214317 [details] whyunobuild Attachment 214317 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/3482132
Build Bot
Comment 14 2013-10-15 17:08:20 PDT
Mark Hahnenberg
Comment 15 2014-02-06 16:36:13 PST
WebKit Commit Bot
Comment 16 2014-02-06 16:37:27 PST
Attachment 223403 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/API/JSContext.h:108: Missing space after , [whitespace/comma] [3] ERROR: Source/JavaScriptCore/API/JSContext.h:110: Missing space after , [whitespace/comma] [3] Total errors found: 2 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 17 2014-02-06 16:51:37 PST
Comment on attachment 223403 [details] Patch r=me
Mark Hahnenberg
Comment 18 2014-02-06 17:18:19 PST
Comment on attachment 223403 [details] Patch Needs some macro magic for iOS stuff.
Mark Hahnenberg
Comment 19 2014-02-06 17:51:54 PST
Note You need to log in before you can comment on or make changes to this bug.