+[JSContext currentCallee] should return the currently executing JS function https://bugs.webkit.org/show_bug.cgi?id=122621

Reviewed by Geoffrey Garen.

It would be useful if there was a +[JSContext currentObject] API which was
callable from ObjC API callbacks. Its purpose would be to allow convenient
access to the JSValue wrapper for the currently-executing block callback.

* API/JSContext.h:
* API/JSContext.mm:
(+[JSContext currentCallee]):
(-[JSContext beginCallbackWithData:calleeValue:thisValue:argumentCount:arguments:]):
* API/JSContextInternal.h:
* API/ObjCCallbackFunction.mm:
(JSC::objCCallbackFunctionCallAsFunction):
(JSC::objCCallbackFunctionCallAsConstructor):
* API/tests/testapi.mm:


Canonical link: https://commits.webkit.org/146367@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163590 268f45cc-cd09-0410-ab3c-d52691b4dbfc