Source/JavaScriptCore/API/JSContext.mm
@@ -141,6 +141,15 @@
     return [JSValue valueWithJSValueRef:entry->thisValue inContext:[JSContext currentContext]];
 }
 
++ (JSValue *)currentCallee
+{
+    WTFThreadData& threadData = wtfThreadData();
+    CallbackData *entry = (CallbackData *)threadData.m_apiData;
+    if (!entry)
+        return nil;
+    return [JSValue valueWithJSValueRef:entry->calleeValue inContext:[JSContext currentContext]];
+}
+
 + (NSArray *)currentArguments
 {
     WTFThreadData& threadData = wtfThreadData();
@@ -238,12 +247,12 @@
     return NO;
 }
 
-- (void)beginCallbackWithData:(CallbackData *)callbackData thisValue:(JSValueRef)thisValue argumentCount:(size_t)argumentCount arguments:(const JSValueRef *)arguments
+- (void)beginCallbackWithData:(CallbackData *)callbackData calleeValue:(JSValueRef)calleeValue thisValue:(JSValueRef)thisValue argumentCount:(size_t)argumentCount arguments:(const JSValueRef *)arguments
 {
     WTFThreadData& threadData = wtfThreadData();
     [self retain];
     CallbackData *prevStack = (CallbackData *)threadData.m_apiData;
-    *callbackData = (CallbackData){ prevStack, self, [self.exception retain], thisValue, argumentCount, arguments, nil };
+    *callbackData = (CallbackData){ prevStack, self, [self.exception retain], calleeValue, thisValue, argumentCount, arguments, nil };
     threadData.m_apiData = callbackData;
     self.exception = nil;
 }
